--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: tools42
-Title: What the Package Does (One Line, Title Case)
+Title: Tools for Analysis at ideas42
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Octavio",
+           family = "Medina",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "omedina@ideas42.org",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
