--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(fbind)
 export(palette_42)
 export(palettes_42)
 export(theme_42)
+export(theme_42_bright)
 export(viz_hist)
 importFrom(rlang,.data)
