--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,4 +15,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
     ggplot2,
-    rlang
+    rlang,
+    rmdformats,
+    palmerpenguins
